--- a/src/main/resources/templates/privacy-admin/user-management/user-list.html
+++ b/src/main/resources/templates/privacy-admin/user-management/user-list.html
@@ -22,7 +22,7 @@
     </th:block>
 </head>
 
-<body>
+<body data-page-type="userManagement">
     <!-- Content -->
     <div layout:fragment="content" class="container">
         <!-- sidebar fragment 사용 -->
