--- a/src/main/resources/static/css/layout-admin.css
+++ b/src/main/resources/static/css/layout-admin.css
@@ -221,6 +221,9 @@ footer {
     width: 1px; 
     border-right: 1px solid #c1e7ec;
 	border-radius: 7px;
+	position: sticky;
+    top: 10px;
+    z-index: 3;
 }
 
 .sidebar-menu, .sidebar-menu ul {
