카테고리리스트 + 페이징 + 검색 구현

--- a/src/main/resources/templates/category/categories-list-search.html
+++ b/src/main/resources/templates/category/categories-list-search.html
@@ -77,7 +77,6 @@
 <!-- index.html 고유 스크립트 추가 -->
 <th:block>
 	<script>
-	
 	</script>
 </th:block>
 <!-- index.html 고유 스크립트 추가 -->
@@ -93,12 +92,16 @@
 	</h1>
 	<h2><a th:href="@{/category/categories-list.do}">카테고리 리스트</a></h2>
 
-	<form id="perPageNumSelect" action="/category/categories-list.do" method="get">
+	<form id="perPageNumSelect" action="/category/categories-list-search.do" method="get">
 		<select name="newPerPageNum">
 			<option value="10" th:selected="${paging.perPageNumVal == 10}">10개씩 보기</option>
 			<option value="20" th:selected="${paging.perPageNumVal == 20}">20개씩 보기</option>
 			<option value="50" th:selected="${paging.perPageNumVal == 50}">50개씩 보기</option>
-		</select>		
+		</select>	
+		
+		<input type="hidden" name="page" th:value="${num}"> 
+		<input type="hidden" name="searchType" th:value="${searchType}"> 
+		<input type="hidden" name="keyword" th:value="${keyword}">
 	</form>
 	<script>
 		$(document).ready(function() {
@@ -116,17 +119,17 @@
 		});
 	</script>
 
-	<form id="searchForm" action="/category/categories-list-search.do"
-		method="get">
+	<form id="searchForm" action="/category/categories-list-search.do" method="get">
 		<select name="searchType">
 			<option value="Category_Num">카테고리 번호</option>
 			<option value="Parent_Category_Num">상위 카테고리 번호</option>
 			<option value="Name">카테고리 이름</option>
 		</select> <input type="text" name="keyword" placeholder="검색어를 입력하세요"> 
-		<input type="hidden" name="page" th:value="${paging.getCurrent()}"> 
+		<input type="hidden" name="page" th:value="1"> 
 		
 		<button type="submit">검색</button>
 	</form>
+
 	<div class="content">
 		<table class="category-table">
 			<tr>
@@ -147,48 +150,48 @@
 				<td th:text="${category.parent_category_num}"></td>
 				<td th:text="${category.name}"></td>
 			</tr>
-		</table>`
+		</table>
 	</div>
 	
-	
+
 	<!-- 페이징 부분 -->
 	<div class="pagination">
 		<ul>
 			<!-- 처음으로 이동하는 링크 -->
 			<li th:if="${paging.cri.page > 1}"><a
-				th:href="@{/category/categories-list.do(page=1, newPerPageNum=${paging.perPageNumVal})}">처음</a>
-			</li>
+				th:href="@{/category/categories-list-search.do(page=1, searchType=${searchType}, keyword=${keyword}, newPerPageNum=${paging.perPageNumVal})}">처음</a></li>
 			<!-- 10페이지 이전 페이지 링크 -->
 			<li th:if="${paging.startPage - paging.pageCount > 0}"><a
-				th:href="@{/category/categories-list.do(page=${paging.startPage-10}, newPerPageNum=${paging.perPageNumVal})}">
-					<span th:unless="${paging.cri.page == 1}"><<</span>
-			</a></li>
+				th:href="@{/category/categories-list-search.do(page=${paging.startPage - 10}, searchType=${searchType}, keyword=${keyword}, newPerPageNum=${paging.perPageNumVal})}">
+			<< </a></li>
 			<!-- 1페이지 이전 페이지 링크 -->
 			<li th:if="${paging.cri.page - 1 > 0}"><a
-				th:href="@{/category/categories-list.do(page=${paging.getPrev()}, newPerPageNum=${paging.perPageNumVal})}">
+				th:href="@{/category/categories-list-search.do(page=${paging.getPrev()}, searchType=${searchType}, keyword=${keyword}, newPerPageNum=${paging.perPageNumVal})}">
 					<span th:if="${paging.cri.page != 1}">이전</span>
 			</a></li>
 			<!-- 페이지 번호 링크 반복 -->
 			<li th:each="num : ${pageNumbers}"
 				th:class="${num == paging.cri.page ? 'active' : ''}"><a
-				th:href="@{/category/categories-list.do(page=${num}, newPerPageNum=${paging.perPageNumVal})}"
+				th:if="${num <= paging.totalPage}"
+				th:href="@{/category/categories-list-search.do(page=${num}, searchType=${searchType}, keyword=${keyword}, newPerPageNum=${paging.perPageNumVal})}"
 				th:text="${num}"></a></li>
 			<!-- 1페이지 다음 페이지 링크 -->
 			<li th:if="${paging.cri.page + 1 <= paging.totalPage}"><a
-				th:href="@{/category/categories-list.do(page=${paging.getNext()}, newPerPageNum=${paging.perPageNumVal})}">다음</a>
-			</li>
+				th:href="@{/category/categories-list-search.do(page=${paging.getNext()}, searchType=${searchType}, keyword=${keyword}, newPerPageNum=${paging.perPageNumVal})}">
+					다음 </a></li>
 			<!-- 10페이지 다음 페이지 링크 -->
 			<li th:if="${paging.endPage + paging.pageCount <= paging.totalPage}">
 				<a
-				th:href="@{/category/categories-list.do(page=${paging.endPage + 1}, newPerPageNum=${paging.perPageNumVal})}">>></a>
+				th:href="@{/category/categories-list-search.do(page=${paging.endPage + 1}, searchType=${searchType}, keyword=${keyword}, newPerPageNum=${paging.perPageNumVal})}">
+					>> </a>
 			</li>
 			<!-- 마지막 페이지로 이동하는 링크 -->
 			<li th:if="${paging.endPage + paging.pageCount <= paging.totalPage}">
 				<a
-				th:href="@{/category/categories-list.do(page=${paging.totalPage}, newPerPageNum=${paging.perPageNumVal})}">마지막</a>
+				th:href="@{/category/categories-list-search.do(page=${paging.totalPage}, searchType=${searchType}, keyword=${keyword}, newPerPageNum=${paging.perPageNumVal})}">
+					마지막 </a>
 			</li>
 		</ul>
 	</div>
-
 </div>
 
