이벤트 관련 추가 1.3

--- a/src/main/resources/templates/event/createEvent.html
+++ b/src/main/resources/templates/event/createEvent.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>등록 완료!</h2>
-    <a th:href="@{/event/listEvents}" class="button">다음</a> 
+    <a th:href="@{/event/listEvents.do}" class="button">다음</a>  
      
     <style>
         .button {
