--- a/src/main/resources/templates/event/listEvents.html
+++ b/src/main/resources/templates/event/listEvents.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/defaultLayout}">
+      
+      <!-- index.html 고유 CSS 추가 -->
+<th:block layout:fragment="css"></th:block>
+<!-- index.html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+    <!--    <script th:src="@{/js/page/home.js}"></script>-->
+</th:block>
+       
 <head>
     <meta charset="UTF-8">
-    <title>Event List</title>
-</head>
-<body>
-<style>
+    <title>일정 관리</title> 
+</head>  
+
+<body> 
+<div layout:fragment="content" class="container">
+<div th:replace="sidebar/mypage :: mypageSidebar"></div>
+<div class="content">일정 관리</div> 
+ 
+<style> 
     .button {
         display: inline-block;
         padding: 5px 20px;  
@@ -15,14 +31,22 @@
         border: none;
         cursor: pointer;
         border-radius: 5px; 
-    }
-
+        float: right; /* 오른쪽으로 띄우기 */
+        position: absolute; /* 절대적인 위치 설정 */
+        margin-top: 40px; /* 버튼 위쪽 여백 조정 */    
+        right: 450px; /* 오른쪽으로 정렬 */    
+    }   
+   
     table {
         border-collapse: collapse;
-        width: 40%;  
-    }
+        width: 70%;      
+        margin-left: auto;  
+        margin-top: 80px; 
+        
+          
+    }  
 
-    th, td {
+    th, td { 
         border: 1px solid black;
         padding: 8px;
         text-align:  center; 
@@ -33,8 +57,8 @@
     }
 </style> 
 
-<h2>일정 관리</h2> 
-<table> 
+   
+<table>  
     <thead> 
         <tr>
             <th>번호</th> 
@@ -44,19 +68,20 @@
             
         </tr> 
     </thead> 
-    <tbody> 
+    <tbody>  
    
         <tr th:each="event : ${eventsList}"> 
             <td th:text="${event.event_num}"></td>
             <td><a th:href="@{/event/viewEvent(eventTitle=${event.title})}" th:text="${event.title}">일정 보기</a></td>
             <td th:text="${event.location}"></td> 
-            <td th:text="${event.ended_at}"></td> 
+            <td th:text="${#dates.format(event.ended_at, 'yyyy-MM-dd HH:mm')}"></td> 
         </tr>
         
         <tr>
              <a class="button" th:href="@{/event/createEventForm}">일정 등록</a>    
         </tr>
     </tbody> 
-</table>
+</table>  
+</div> 
 </body>
-</html>
+</html> 
