--- a/src/main/resources/templates/sidebar/mypage.html
+++ b/src/main/resources/templates/sidebar/mypage.html
@@ -11,7 +11,7 @@
             <li><a href="">반려친구 관리</a></li>
             <li><a href="">일정 관리</a>
                 <ul>
-                    <li><a href="#!">일정 관리</a></li>
+                    <li><a href="/event/listEvents.do">일정 관리</a></li> 
                     <li><a href="#!">일정 카테고리 관리</a></li>
                 </ul>
             </li>
