--- a/src/main/resources/templates/privacy-admin/user-management/main.html
+++ b/src/main/resources/templates/privacy-admin/user-management/main.html
@@ -33,6 +33,9 @@
             padding: 6px 15px;
             text-align: center;
         }
+        th {
+            color: #fff;
+        }
         td {
             overflow: hidden;
             text-overflow: ellipsis;
