--- a/src/main/resources/templates/board/viewArticle.html
+++ b/src/main/resources/templates/board/viewArticle.html
@@ -18,6 +18,8 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
               flex-direction: row; 
               align-items: start;
           }
+          
+          
   </style>
       <!--    <link rel="stylesheet" th:href="@{/css/page/home.css}" >-->
 </th:block>
@@ -29,15 +31,17 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
 	      var editButton = document.getElementById("editButton");
 	      var titleInput = document.getElementById("titleInput");
 	      var contentTextarea = document.getElementById("contentTextarea");
+	      var deleteButton = document.getElementById("deleteButton"); // 추가
 	      
 	      editButton.addEventListener("click", function() {
 	    	topLevelSelect.removeAttribute("disabled");
 	        titleInput.removeAttribute("disabled");
 	        contentTextarea.removeAttribute("disabled");
 	        editButton.style.display = "none";
+	        resetButton.style.display = "inline";
 	        saveButton.style.display = "inline";
-	        deleteButton.style.display = "inline";
-	      });
+	        deleteButton.style.display = "none";
+	      });	      
 	    });
    
     
@@ -53,6 +57,8 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
     if (updated_at_element) {
         updated_at_element.textContent = currentDate;
     }
+    
+ 
     
    
    </script>
@@ -104,12 +110,16 @@ layout:decorate="~{layout/defaultLayout}"><!--푸터, 헤더 적용-->
                 <td align="left"> </td>
                 <td colspan="2">
                           <input type="button" value="수정하기" id="editButton" >
-                          <input type="submit" value="저장하기" id="saveButton" style="display: none;">
-                          <input type="button" value="삭제하기" id="deleteButton">          
+                          <input type="reset" value="초기화" id="resetButton" style="display: none;">
+                          <input type="submit" value="저장하기" id="saveButton" style="display: none;">	        
                 </td>
             </tr>
         </table>
     </form>
+         <form th:action="@{delete/{post_num}(post_num=${board.post_num})}" method="post">
+       <input type="submit" value="삭제하기" id="deleteButton">
+   		<input type="hidden" name="categoryNum" th:value="${board.category_num}" />
+   		</form>
   </div>
 </div>
 </body>
