--- a/src/main/resources/static/css/layout-admin.css
+++ b/src/main/resources/static/css/layout-admin.css
@@ -223,7 +223,7 @@ footer {
 	border-radius: 7px;
 	position: sticky;
     top: 10px;
-    z-index: 3;
+    z-index: 10;
 }
 
 .sidebar-menu, .sidebar-menu ul {
@@ -326,3 +326,4 @@ footer {
     margin-top: 15px;
     padding-top: 10px;
 }
+/* sidebar end-point */
