--- a/src/main/resources/templates/layout/defaultLayout.html
+++ b/src/main/resources/templates/layout/defaultLayout.html
@@ -8,11 +8,13 @@
     <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">애니플랜트</title>
     <link rel="stylesheet" th:href="@{/css/layout.css}"/>
     <link rel="stylesheet" th:href="@{/css/nav.css}"/>
+    <link rel="stylesheet" th:href="@{/css/search.css}"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script th:src="@{/js/layout.js}"></script>
+    <script th:src="@{/js/search.js}"></script>
     <!-- content style -->
     <th:block layout:fragment="css"></th:block>
     <!-- content script -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <th:block layout:fragment="script"></th:block>
 </head>
 <body>
