--- a/src/main/resources/templates/event/viewEvent.html
+++ b/src/main/resources/templates/event/viewEvent.html
@@ -26,7 +26,7 @@
    <style> 
         .button {
             display: inline-block;
-            padding: 5px 20px;
+            padding: 5px 20px; 
             background-color: #888888;
             color: white;
             text-decoration: none; 
@@ -123,14 +123,14 @@
             <label for="type">내용</label>
             <input type="text" th:id="${'type_' + event.event_num}" th:name="'type_' + ${event.event_num}" th:value="${event.type}" disabled class="styled-input" />
         </div>
-        
-        <a th:href="@{/event/deleteEvent(eventId=${event.event_num})}" class="button">일정 삭제</a> 
-        <a th:href="@{/event/editEventForm(eventNum=${event.event_num})}" class="button">일정 수정</a>
-    </div>
-</div>
          
-    <div th:if="${event == null}">
+        <a th:href="@{/event/deleteEvent(eventNum=${event.event_num})}" class="button">일정 삭제</a>
+        <a th:href="@{/event/editEventForm(eventNum=${event.event_num})}" class="button">일정 수정</a>
+    </div>     
+</div>  
+         
+    <div th:if="${event == null}"> 
         <p>일정이 존재하지 않습니다.</p>  
-       
+        
    </div> 
 </div>  
