--- a/src/main/resources/templates/sessionExpired.html
+++ b/src/main/resources/templates/sessionExpired.html
@@ -3,8 +3,8 @@
 <head>
     <title>Session Expired</title>
     <script>
-        alert("세션이 만료되어 로그아웃합니다.");
-        window.location.href = "/user/login.do"; 
+        alert("로그아웃을 완료했습니다.");
+        window.location.href = "/index.do"; 
     </script>
 </head>
 <body>
