--- a/src/main/resources/templates/sidebar/privacy-admin.html
+++ b/src/main/resources/templates/sidebar/privacy-admin.html
@@ -13,7 +13,7 @@
             <li><a href="/privacy-admin/user-management/new-users.do">신규 가입 회원</a></li>
             <li><a href="/privacy-admin/user-management/suspended-users.do">정지된 회원</a></li>
             <li><a href="/privacy-admin/user-management/withdrawn-users.do">탈퇴한 회원</a></li>
-            <li><a href="/privacy-admin/user-management/admin-list.do">관리자 정보 관리</a></li>
+            <li><a href="/privacy-admin/user-management/admin-list.do">관리자 리스트</a></li>
         </ul>
         <div class="contact-us">
             <a href="">고객문의함</a>
