ver 1.4 merge 수정(d와 WEB-INF 파일 삭제, 주석 오류 수정)

--- a/src/main/resources/templates/sessionExpired.html
+++ b/src/main/resources/templates/sessionExpired.html
@@ -3,7 +3,7 @@
 <head>
     <title>Session Expired</title>
     <script>
-        alert("로그아웃을 완료했습니다.");
+        alert("로그아웃 되었습니다.");
         window.location.href = "/index.do"; 
     </script>
 </head>
