--- a/src/main/resources/templates/sidebar/mypage.html
+++ b/src/main/resources/templates/sidebar/mypage.html
@@ -8,7 +8,7 @@
     <div th:fragment="mypageSidebar" class="sidebar">
         <ul class="sidebar-menu">
             <a class="menu-title" href="/mypage/profile.do">마이페이지</a>
-            <li><a href="">반려친구 관리</a></li>
+            <li><a href="/mypage/pet-list.do">반려친구 관리</a></li>
             <li><a href="">일정 관리</a>
                 <ul>
                     <li><a href="/event/listEvents.do">일정 관리</a></li> 
