--- a/src/main/resources/templates/mypage/pet-join.html
+++ b/src/main/resources/templates/mypage/pet-join.html
@@ -8,7 +8,7 @@
 <th:block layout:fragment="css">
 </th:block>
 <th:block layout:fragment="script">
-	<script th:src="@{/js/pet-join.js}"></script>
+	<script th:src="@{/js/pet/pet-join.js}"></script>
 </th:block>
 
 <div layout:fragment="content" class="container">
