--- a/src/main/resources/templates/mypage/pet-list.html
+++ b/src/main/resources/templates/mypage/pet-list.html
@@ -9,7 +9,7 @@
 	<!--    <link rel="stylesheet" th:href="@{/css/page/home.css}" >-->
 </th:block>
 <th:block layout:fragment="script">
-	<script th:src="@{/js/pet-list.js}"></script>
+	<script th:src="@{/js/pet/pet-list.js}"></script>
 </th:block>
 
 <div layout:fragment="content" class="container">
@@ -26,7 +26,7 @@
 			</tr>
 			<tr th:each="pet: ${petList}">
 				<td>
-					<a th:href="@{/mypage/pet-info/{id}.do(id=${pet.pet_no})}" th:text="${pet.name}"></a>
+					<a th:href="@{/mypage/pet-management/{id}.do(id=${pet.pet_no})}" th:text="${pet.name}"></a>
 				</td>
 				<!-- '생일' 날짜 서식 적용 -->
 				<td th:text="${#dates.format(pet.birth, 'yyyy-MM-dd')}"></td>
