카테고리 페이지 링크연결 + footer 부분 상부3조 로고 추가

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -28,6 +28,7 @@
 				</li>
 			</ul>
 			<ul class="team-info">
+				<li><img src="/img/sangboo3jo_logo.png" alt="상부3조" style="width:100px"></li>
 				<li>조장 : 조영준</li>
 				<li>조원 : 배선률 박정용 신서현 이규승 정회산</li>
 			</ul>
