--- a/src/main/resources/templates/event/viewEvent.html
+++ b/src/main/resources/templates/event/viewEvent.html
@@ -31,7 +31,7 @@
             color: white;
             text-decoration: none; 
             border: none;
-            cursor: pointer;
+            cursor: pointer; 
             border-radius: 5px;
             margin-top: 10px;
         }
@@ -97,7 +97,7 @@
         </div>  
     </div> 
       
-             
+              
                
            
         <div class="form-group">
@@ -106,7 +106,7 @@
         </div>
  
         <div class="form-group">
-           <label for="started_at">기간</label>
+           <label for="started_at">시작일/종료일</label> 
         <div class="date-range">
         <input type="text" th:id="${'started_at_' + event.event_num}" th:name="'started_at_' + ${event.event_num}" th:value="${#dates.format(event.started_at, 'yyyy-MM-dd HH:mm')}" disabled class="styled-input" />
         <span class="date-separator">~</span>
