--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -41,6 +41,11 @@
 				</div>
 			</div>
 	  	</header>
+		<div id="search-modal" class="modal">
+			<div class="modal-content">
+				<div class="ping"></div><div class="modal-text">검색중입니다. 잠시만 기다려주세요.</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
