--- a/src/main/resources/templates/mypage/my-info-update.html
+++ b/src/main/resources/templates/mypage/my-info-update.html
@@ -3,6 +3,7 @@
 
 <!-- 해당 페이지 고유 CSS 추가 -->
 <th:block layout:fragment="css">
+    <link rel="stylesheet" th:href="@{/css/mypage.css}">
 	<style>
         .error {
             color: red;
@@ -14,11 +15,16 @@
 	<div class="content">
 		<h2>계정 정보 수정</h2>
 		<form id="update_form" name="update_form" method="post" action="">
+            <div id="profile-area">
+                <img id="curProfileImage" class="profileImage" th:src="@{'/img/' + ${user.profile_picture}}">
+                <button type="button" id="editProfile" class="update-btn">프로필 사진 변경</button>
+                <button type="button" id="resetProfile" class="update-btn">초기화</button>
+            </div>
             <input type="text" id="idUpdateInput" name="id" th:value="${user.id}" disabled><br> 
             <input type="password" id="passwordUpdateInput" name="password" placeholder="변경 시 비밀번호를 입력해주세요"><span id="passwordError" class="error"></span><br>
             <input type="password" id="passwordUpdateConfirmInput" name="password_confirm" placeholder="비밀번호 확인"><span id="passwordConfirmError" class="error"></span><span id="passwordCheckError" class="error"></span><br>
             <input type="email" id="emailUpdateInput" name="email" placeholder="비밀번호 분실 시 확인용 이메일" th:value="${user.email}"><span id="emailError" class="error"></span><br>
-            <input type="text" id="nicknameUpdateInput" name="nickname" placeholder="닉네임" maxlength="10" th:value="${user.nickname}"><button type="button" id="checkNickname" class="check_btn">중복 확인</button><span id="nicknameError" class="error"></span><br>
+            <input type="text" id="nicknameUpdateInput" name="nickname" placeholder="닉네임" maxlength="10" th:value="${user.nickname}"><button type="button" id="checkNickname" class="update-btn">중복 확인</button><span id="nicknameError" class="error"></span><br>
             <input type="text" id="nameUpdateInput" name="name" th:value="${user.name}" disabled><br> 
             <input type="text" id="birthUpdateInput" name="birth" th:value="${#dates.format(user.birth, 'yyyy-MM-dd')}" disabled><br> 
             <input type="tel" id="telUpdateInput" name="tel" placeholder="'-'를 포함한 휴대전화번호" th:value="${user.country_code + '-' + user.first_hp + '-' + user.second_hp}"><span id="telError" class="error"></span><br>
@@ -37,6 +43,7 @@
     $(document).ready(function() {
 		
     	// 사용할 변수 선언
+        var originalProfile = $("#curProfileImage").attr("src");
         var originalNickname = $("#nicknameUpdateInput").val();
         var isNicknameChanged = false;
         var isNicknameChecked = false;
@@ -46,7 +53,17 @@
         var originalTel = $("#telUpdateInput").attr("th:value");
         var userNum = userData.user_num;
         var userId = userData.id;
-        
+
+        // 프로필 사진 변경 버튼
+        $("#editProfile").click(function() {
+            window.open("/mypage/my-info-profile-edit.do?currentProfilePicSrc=" + originalProfile ,'_blank', 'width=650,height=650,scrollbars=no,menubar=no,toolbar=no,location=no');
+        });
+
+        // 프로필 초기화 버튼
+        $("#resetProfile").click(function() {
+            $("#curProfileImage").attr("src", originalProfile);
+        });
+
         // 닉네임 변경 확인
         $("#nicknameUpdateInput").change(function() {
             var currentNickname = $(this).val();
@@ -80,7 +97,7 @@
             });
         });
 
-        // 수정 버튼 클릭시 로직
+        // 수정 버튼 로직
         $("#update_btn").click(function() {
             var isValid = true;
 
