--- a/src/main/resources/templates/mypage/my-info-profile-edit.html
+++ b/src/main/resources/templates/mypage/my-info-profile-edit.html
@@ -6,6 +6,7 @@
     <!-- JS 사진 편집 오픈소스 소프트웨어 cropper -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.0/cropper.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.0/cropper.min.js"></script>
+    <script th:src="@{/js/cropper.js}"></script>
     <link rel="stylesheet" th:href="@{/css/mypage.css}">
 </head>
 
@@ -15,40 +16,31 @@
     <div class="content">
         <h2>프로필 사진 변경</h2>
         <div id="cropper-area">
-            <img id="editProfileImage" class="profileImage" th:src="@{${currentProfilePic}}">
+            <div id="cropper-edit-area">
+                <img id="editCropperImage" class="profileImage" th:src="@{${currentProfilePic}}">
+            </div>
+            <div id="cropper-setting-area">
+                <label for="profileImageInput" class="label-file-input">
+                    <img th:src="@{/img/cropper/image-plus.png}" alt="Upload Icon"> 파일 선택
+                </label>
+                <input type="file" id="profileImageInput" name="profile_picture">
+                <div class="preview">
+                    <img id="previewImage" class="profileImagePreview">
+                </div>
+                <div class="cropper-btn-group1">
+                    <button type="button" id="dragModeMoveBtn" class="cropper-btn" th:style="'background-image:url(' + @{/img/cropper/move.png} + ');'"></button>
+                    <button type="button" id="dragModeCropBtn" class="cropper-btn" th:style="'background-image:url(' + @{/img/cropper/crop.png} + ');'"></button>
+                    <button type="button" id="rotateLeftBtn" class="cropper-btn" th:style="'background-image:url(' + @{/img/cropper/rotate-left.png} + ');'"></button>
+                    <button type="button" id="rotateRightBtn" class="cropper-btn" th:style="'background-image:url(' + @{/img/cropper/rotate-right.png} + ');'"></button>
+                    <button type="button" id="flipVerticalBtn"  class="cropper-btn" th:style="'background-image:url(' + @{/img/cropper/flip-vertical.png} + ');'"></button>
+                    <button type="button" id="flipHorizontalBtn" class="cropper-btn" th:style="'background-image:url(' + @{/img/cropper/flip-horizontal.png} + ');'"></button>
+                </div>
+                <div class="cropper-btn-group2">
+                    <button type="button" id="resetBtn" class="cropper-btn"><img th:src="@{/img/cropper/reset.png}">초기화</button>
+                    <button type="button" id="changeProfile" class="cropper-btn"><img th:src="@{/img/cropper/save.png}">저장</button>
+                </div>
+            </div>
         </div>
-        <input type="file" id="profileImageInput" name="profile_picture">
-        <button type="button" id="changeProfile" class="update-btn">저장하기</button>
     </div>
 </body>
-
-<script>
-    $(document).ready(function(){
-
-        const image = document.getElementById('editProfileImage');
-        const cropper = new Cropper(image, {
-            aspectRatio: 1 / 1,
-            crop(event) {
-                console.log(event.detail.x);
-                console.log(event.detail.y);
-                console.log(event.detail.width);
-                console.log(event.detail.height);
-                console.log(event.detail.rotate);
-                console.log(event.detail.scaleX);
-                console.log(event.detail.scaleY);
-            },
-        });
-
-        // 사진 변경 
-        $("#profileImageInput").change(function() {
-            var reader = new FileReader();
-            
-            reader.onload = function(e) {
-                $("#editProfileImage").attr("src", e.target.result);
-            }
-            
-            reader.readAsDataURL(this.files[0]);
-        });
-    });
-</script>
 </html>
