--- a/src/main/resources/static/css/cropper.css
+++ b/src/main/resources/static/css/cropper.css
@@ -1,13 +1,11 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    max-width: 1000px;
 }
 
 .content {
-    max-width: 1000px;
     padding: 20px;
     background-color: #fff;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
@@ -17,6 +15,7 @@ h2 {
 #editCropperImage {
     display: block;
     max-width: 100%;
+    max-height: 530px;
     margin-bottom: 20px;
 }
 
@@ -26,16 +25,21 @@ h2 {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
+    border: 1px solid #69d1c6;
+    border-radius: 7px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
 #cropper-edit-area {
     width: 65%;
     padding-right: 20px;
-    border-right: 1px solid #e0e0e0;
+    margin: 10px;
+    overflow: hidden;
 }
 
 #cropper-setting-area {
-    width: 30%;
+    width: 35%;
+    margin: 10px;
 }
 
 #profileImageInput {
@@ -47,16 +51,17 @@ h2 {
     display: inline-block;
     padding: 5px 10px;
     border-radius: 8px;
-    background-color: #14b8a6;
+    background-color: #43c6b8;
     color: #ffffff;
     transition: background-color 0.2s;
     cursor: pointer;
     width: 273px;
     line-height: 1.5;
+    margin-top: 10px;
 }
 
 .label-file-input:hover {
-    background-color: #109385;
+    background-color: #14b8a6;
 }
 
 .label-file-input img {
@@ -71,7 +76,7 @@ h2 {
     max-width: 100%;
     display: block;
     margin: 30px 20px;
-    border: 1px solid #E0E0E0;
+    border: 1px solid #69d1c6;
 }
 
 .cropper-btn {
@@ -115,8 +120,13 @@ h2 {
 .cropper-btn-group2 > .cropper-btn {
     width: 140px;
     height: 45px;
+    background-color: #109385;
     text-indent: 0;
     font-size: 16px;
     font-weight: bold;
     color: #ffffff;
+}
+
+.cropper-btn-group2 > .cropper-btn:hover {
+    background-color: #0d766a;
 }
