--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -260,8 +260,8 @@
 			var is_admin = "USER";
             var profile_picture;
             if (gender == "M") {
-                profile_picture = "profile-default-m.png";
-            } else { profile_picture = "profile-default-w.png"; }
+                profile_picture = "/img/profile-default-m.png";
+            } else { profile_picture = "/img/profile-default-w.png"; }
             
             var formData = {
                 id: id,
