--- a/src/main/resources/templates/fragments/header-admin.html
+++ b/src/main/resources/templates/fragments/header-admin.html
@@ -27,7 +27,7 @@
 				<button type="button" id="joinLink_btn" class="user_btn" th:if="${!isLoggedIn}"><img src="/img/join.png">회원가입</button>
 				<!--로그아웃 버튼-->
 				<div class="profile-group" th:if="${isLoggedIn}">
-					<img id="profile-img" src="/img/profile-default-m.png">
+					<img id="profile-img" th:src="${#authentication.principal.profile_picture}">
 					<div class="user-group">
 						<img id="rank-img" th:src="${#authentication.principal.rank.imagePath}">
 						<p id="login-nickname" th:text="${#authentication.principal.nickname} + 님">Nickname님</p>
