--- a/src/main/resources/templates/privacy-admin/user-management/user-detail.html
+++ b/src/main/resources/templates/privacy-admin/user-management/user-detail.html
@@ -8,7 +8,7 @@
     <div class="detail-content" th:classappend="${user.is_deleted} ? 'deleted-user' : (${user.is_suspended} ? 'suspended-user' : '')">
         <h2 th:text="${user.name + '님의 회원 정보'}">User Information</h2>
         <div class="basic-info-area">
-            <div><img id="detail-profile-img" th:src="@{'/img/' + ${user.profile_picture}}"></div>
+            <div><img id="detail-profile-img" th:src="@{${user.profile_picture}}"></div>
             <div>
                 <li><strong>회원 번호 : </strong> <span id="userData" th:text="${user.user_num}"></span></li>
                 <li><strong>회원 등급 : </strong> <img class="detail-rank-img" th:src="${user.rank.imagePath}"><span th:text="${user.rank.displayName}"></span></li>
