마이페이지 메인 프론트 완료(캘린더 CSS 조정, 툴팁 추가)

--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -10,7 +10,14 @@ li {
     margin: 0 0 15px;
     border-bottom: 1px solid #14b8a6;
 }
-
+.fc-day-sun a {
+    color: red;
+    text-decoration: none;
+  }
+.fc-day-sat a {
+    color: blue;
+    text-decoration: none;
+  }
 /* 마이페이지 메인페이지 start */
 .mypage-wrapper {
     display: flex;
