--- a/src/main/resources/templates/mypage/main.html
+++ b/src/main/resources/templates/mypage/main.html
@@ -48,6 +48,141 @@
         td { 
             font-size: 13px;
         }
+        .fc-event {
+            transition: background-color 0.3s;
+            transition: border-color 0.3s;
+            background-color: transparent;
+            border: none;
+            color: black;
+        }
+        .fc-event:hover {
+            background-color: rgba(128, 128, 128, 0.1); 
+            border: none;
+            color: black;
+        }
+        .fc-daygrid-dot-event {
+            align-items: center;
+            display: flex;
+            padding: 2px 0px;
+        }
+        .fc ::after, .fc ::before {
+            vertical-align: top;
+        }
+        .fc-event-title-container {
+            background-color: #14b8a6;
+            border-radius: 3px;
+        }
+        .fc-event-title-container:hover {
+            opacity: 0.7;
+        }
+        .fc-daygrid-event-dot {
+            margin-left: 2px;
+            margin-right: 2px;
+        }
+        .fc-event-title {
+            margin-left: 2px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        /* 툴팁 */
+        .popper,
+        .tooltip {
+            position: absolute;
+            z-index: 9999;
+            background: #d7f3f0;
+            color: black;
+            width: 150px;
+            border-radius: 3px;
+            box-shadow: 0 0 2px rgba(0,0,0,0.5);
+            padding: 10px;
+            text-align: center;
+        }
+        .style5 .tooltip {
+            background: #1E252B;
+            color: #FFFFFF;
+            max-width: 200px;
+            width: auto;
+            font-size: .8rem;
+            padding: .5em 1em;
+        }
+        .popper .popper__arrow,
+        .tooltip .tooltip-arrow {
+            width: 0;
+            height: 0;
+            border-style: solid;
+            position: absolute;
+            margin: 5px;
+        }
+
+        .tooltip .tooltip-arrow,
+        .popper .popper__arrow {
+            border-color: #d7f3f0;
+        }
+        .style5 .tooltip .tooltip-arrow {
+            border-color: #1E252B;
+        }
+        .popper[x-placement^="top"],
+        .tooltip[x-placement^="top"] {
+            margin-bottom: 5px;
+        }
+        .popper[x-placement^="top"] .popper__arrow,
+        .tooltip[x-placement^="top"] .tooltip-arrow {
+            border-width: 5px 5px 0 5px;
+            border-left-color: transparent;
+            border-right-color: transparent;
+            border-bottom-color: transparent;
+            bottom: -5px;
+            left: calc(50% - 5px);
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        .popper[x-placement^="bottom"],
+        .tooltip[x-placement^="bottom"] {
+            margin-top: 5px;
+        }
+        .tooltip[x-placement^="bottom"] .tooltip-arrow,
+        .popper[x-placement^="bottom"] .popper__arrow {
+            border-width: 0 5px 5px 5px;
+            border-left-color: transparent;
+            border-right-color: transparent;
+            border-top-color: transparent;
+            top: -5px;
+            left: calc(50% - 5px);
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        .tooltip[x-placement^="right"],
+        .popper[x-placement^="right"] {
+            margin-left: 5px;
+        }
+        .popper[x-placement^="right"] .popper__arrow,
+        .tooltip[x-placement^="right"] .tooltip-arrow {
+            border-width: 5px 5px 5px 0;
+            border-left-color: transparent;
+            border-top-color: transparent;
+            border-bottom-color: transparent;
+            left: -5px;
+            top: calc(50% - 5px);
+            margin-left: 0;
+            margin-right: 0;
+        }
+        .popper[x-placement^="left"],
+        .tooltip[x-placement^="left"] {
+            margin-right: 5px;
+        }
+        .popper[x-placement^="left"] .popper__arrow,
+        .tooltip[x-placement^="left"] .tooltip-arrow {
+            border-width: 5px 0 5px 5px;
+            border-top-color: transparent;
+            border-right-color: transparent;
+            border-bottom-color: transparent;
+            right: -5px;
+            top: calc(50% - 5px);
+            margin-left: 0;
+            margin-right: 0;
+        }
     </style>
 </th:block>
 <!-- 해당 페이지 고유 스크립트 추가 -->
@@ -55,6 +190,8 @@
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script>
     <script src='fullcalendar/core/locales/es.global.js'></script>
     <script th:src="@{/js/mypage.js}"></script>
+    <script src='https://unpkg.com/popper.js/dist/umd/popper.min.js'></script>
+    <script src='https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js'></script>
 </th:block>
 
 <!-- Content -->
@@ -82,10 +219,10 @@
                 <div id="myPetInfo-area">
                     <!-- <div><img id="my-pet-profile-img" th:src="@{${pet.profile_picture}}"></div> -->
                     <div><img id="my-pet-profile-img" th:src="@{/img/hatching-chick.png}"></div>
-                    <div th:each="pet : ${pet}" class="info-li">
-                        <li><strong>이름 : </strong> <span th:text="${pet.name}"></span></li>
+                    <div class="info-li">
+                        <li><strong>이름 : </strong> <span th:text="${pet[0].name}"></span></li>
                         <li><strong>나이 : </strong> <span></span></li>
-                        <li style="display: none;"><strong>생일 : </strong> <span th:text="${pet.birth}" id="pet-birth"></span></li></li>
+                        <li style="display: none;"><strong>생일 : </strong> <span th:text="${pet[0].birth}" id="pet-birth"></span></li></li>
                     </div>
                 </div>
             </div>
